public/assets/css/painel.css
body {
  min-height: 100vh;
  min-height: -webkit-fill-available;
  background-color: rgba(0, 0, 0, 0.1);
}

html {
  height: -webkit-fill-available;
}

#sidebar {
  min-height:350px; width: 250px;
}

.navbar-toggler {
  border: none;
}
.navbar-toggler:focus {
  box-shadow: none;
}
.navbar-toggler-icon {
  width: 24px;
  height: 24px;
}

